--- a/accessibility/keyboard/01-styles.css
+++ b/accessibility/keyboard/01-styles.css
@@ -659,7 +659,6 @@ ul.row {
 .card-work .card-title {
   text-align: center;
   margin: 0;
-  opacity: 0;
   height: 100%;
   position: relative;
 }
@@ -668,6 +667,7 @@ ul.row {
   display: block;
   text-decoration: none;
   padding-top: 45%;
+  opacity: 0;
 }
 
 .card-work .card-title a::after {
@@ -679,14 +679,11 @@ ul.row {
   content: '';
 }
 
+.card-work .card-title a:focus,
 .card-work:hover .card-title a {
   opacity: 1;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-}
-
-.card-work .card-title a {
-  opacity: 0;
 }
 
 @media only screen and (max-width: 767px) {
