--- a/sass_scss/6-nested_hover.scss
+++ b/sass_scss/6-nested_hover.scss
@@ -1,11 +1,10 @@
-/* Nested hover */
-$color-red: #ff0000;
-$color-green-light: #00ff00;
+/* Nested hover
+change button color on hover*/
 
 button {
-  color: $color-red;
+    color: #FF0000;
 
-  &:hover {
-    color: $color-green-light;
-  }
+    &:hover {
+        color: #00FF00;
+    }
 }
